# esp32-ntrip-DUO

./: CHANGELOG.txt  CMakeLists.txt  README.md  UI_DESIGN_RULES.md  sdkconfig  test-checklist.md  test-plan.md
button/: button.c
button/include/: button.h
components/: CMakeLists.txt
esp32s3test/: New Text Document.txt  sdkconfig
esp32s3test/button/: CMakeLists.txt
esp32s3test/main/: CMakeLists.txt  config.c  status_led.c  web_server.c  wifi.c
esp32s3test/main/include/interface/: ntrip.h
esp32s3test/main/interface/: ntrip_server.c
main/: CMakeLists.txt  config.c  main.c  uart.c  web_server.c
main/include/: config.h
main/include/interface/: ntrip.h
main/interface/: ntrip_server_2.c  ntrip_server_2_mod.c  ntrip_server_3.c  ntrip_server_4.c
www/: index.html  index1.html
www-1/: app-optimized.js  app.js  form-fix.js  index-optimized.html  index.html  manifest.json  styles-optimized.css  styles.css  sw.js  test-automation.js  test-runner.html  uart-fix.js
www-goc/: index.html
